Fix Dark Mode Placeholder

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -14,7 +14,7 @@
 
 @layer components {
     input.form-control {
-        @apply block w-full border-gray-300 rounded-md shadow-sm disabled:bg-gray-300 readonly:bg-gray-300 dark:border-transparent focus:shadow-md focus:ring-primary focus:ring-2 dark:disabled:bg-gray-800 dark:readonly:bg-gray-800 dark:disabled:text-gray-400 dark:readonly:text-gray-400 dark:bg-white/10 dark:text-white;
+        @apply block w-full border-gray-300 rounded-md shadow-sm disabled:bg-gray-300 readonly:bg-gray-300 dark:border-transparent focus:shadow-md focus:ring-primary focus:ring-2 dark:disabled:bg-gray-800 dark:readonly:bg-gray-800 dark:disabled:text-gray-400 dark:readonly:text-gray-400 dark:bg-white/10 dark:text-white dark:placeholder-white/30;
     }
     select.form-control {
         @apply block w-full border-gray-300 rounded-md shadow-sm dark:border-transparent disabled:bg-gray-300 readonly:bg-gray-300 focus:shadow-md focus:ring-primary focus:ring-2 dark:text-white dark:bg-white/10 dark:disabled:bg-gray-800 dark:readonly:bg-gray-800 dark:disabled:text-gray-400 dark:readonly:text-gray-400;
